Add hideout query

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -248,6 +248,14 @@ SQL1_INPUTS = 1,2
 
 Number of Inputs = 2
 
+;;______________________________________________________________
+[hideoutCheck]
+;; Gets info on hideouts
+;;
+
+SQL1_1 = SELECT gangName FROM hideouts WHERE id='1';
+
+Number of Inputs = 0
 
 ;;**************************************************************
 ;;**************************************************************
