Trying another angle

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -770,3 +770,11 @@ SQL1_1 = UPDATE wanted SET active = 0, wantedCrimes = '[]', wantedBounty = 0 WHE
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
+ 
+;;______________________________________________________________
+[CARTELS_Check]
+;;
+ 
+SQL1_1 = SELECT list FROM zones WHERE id=1;
+ 
+OUTPUT = 1-AltisLifeRPG_Array
