--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -770,3 +770,12 @@ SQL1_1 = UPDATE wanted SET active = 0, wantedCrimes = '[]', wantedBounty = 0 WHE
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
+
+;;______________________________________________________________
+[gangCall]
+;;
+
+SQL1_1 = SELECT list FROM zones WHERE id = '1';
+
+Number of Inputs = 0
+
