Add cartel update call

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -772,10 +772,19 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 ;;______________________________________________________________
-[gangCall]
+[cartelCall]
 ;;
 
 SQL1_1 = SELECT list FROM zones WHERE id = '1';
 
 Number of Inputs = 0
+
+;;______________________________________________________________
+[cartelUpdate]
+;;
+
+SQL1_1 = UPDATE zones SET list=? WHERE id='1';
+SQL1_INPUTS = 1
+
+Number of Inputs = 1
 
