Adding in shop payouts

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -788,3 +788,12 @@ SQL1_INPUTS = 1
 
 Number of Inputs = 1
 
+;;______________________________________________________________
+[cartelGangMoneyUpdate]
+;;
+
+SQL1_1 = UPDATE gangs SET bank = bank + ? WHERE name=?;
+SQL1_INPUTS = 1,2
+
+Number of Inputs = 2
+
