Mayor backend, repair fix, surrender fix, atm fix

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -789,11 +789,19 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 ;;______________________________________________________________
-[cartelGangMoneyUpdate]
+[addCandidate]
 ;;
 
-SQL1_1 = UPDATE gangs SET bank = bank + ? WHERE name=?;
-SQL1_INPUTS = 1,2
+SQL1_1 = INSERT INTO mayor (id, name, text) VALUES(?,?,?);
+SQL1_INPUTS = 1, 2
 
 Number of Inputs = 2
+
+;;______________________________________________________________
+[mayorCheck]
+;;
+
+SQL1_1 = SELECT candidates FROM mayor WHERE id = '1';
+
+Number of Inputs = 0
 
