--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -805,3 +805,15 @@ SQL1_1 = SELECT candidates FROM mayor WHERE id = '1';
 
 Number of Inputs = 0
 
+;;______________________________________________________________
+[InsuranceVehicle]
+;;
+
+SQL1_1 = UPDATE vehicles;
+SQL1_2 = SET alive='1', active='0' WHERE pid=? AND plate=?;
+
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
