Move over all functions to ini

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -90,7 +90,7 @@ Prepared Statement Cache = false
 [deleteDeadVehicles]
 ;;
 
-SQL1_1 = CALL deleteDeadVehicles;
+SQL1_1 = DELETE FROM vehicles WHERE alive=0;
 
 Number of Inputs = 0
 Prepared Statement Cache = false
@@ -100,7 +100,7 @@ Prepared Statement Cache = false
 [deleteOldHouses]
 ;;
 
-SQL1_1 = CALL deleteOldHouses;
+SQL1_1 = DELETE FROM houses WHERE owned=0;
 
 Number of Inputs = 0
 Prepared Statement Cache = false
@@ -110,7 +110,7 @@ Prepared Statement Cache = false
 [deleteOldGangs]
 ;;
 
-SQL1_1 = CALL deleteOldGangs;
+SQL1_1 = DELETE FROM gangs WHERE active=0;
 
 Number of Inputs = 0
 Prepared Statement Cache = false
