Persistent wanted list

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -568,12 +568,6 @@ SQL1_1 = UPDATE vehicles SET alive=? WHERE pid=? AND plate=?;
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
-;;**************************************************************
-;;**************************************************************
-;; Wanted System
-;;
-
-
 ;;______________________________________________________________
 [housingCount]
 ;;
@@ -665,108 +659,19 @@ SQL1_INPUTS = 1
 
 Number of Inputs = 1
 
-;;**************************************************************
-;;**************************************************************
-;; Wanted System
+;;______________________________________________________________
+[wantedSync]
 ;;
 
+SQL1_1 = SELECT list FROM wanted WHERE id = '1';
+
+Number of Inputs = 0
 
 ;;______________________________________________________________
-[wantedGetCrimes]
+[wantedUpdate]
 ;;
 
-SQL1_1 = SELECT wantedID, wantedCrimes FROM wanted WHERE wantedID=?;
-
-SQL1_INPUTS = 1
-Number of Inputs = 1
-
-OUTPUT = 1-String, 2-AltisLifeRPG_Array
-
-;;______________________________________________________________
-[wantedUpdateCrimes]
-;;
-
-SQL1_1 = UPDATE wanted SET wantedCrimes = ?, wantedBounty = wantedBounty + ?, active = '1' WHERE wantedID=?;
-SQL1_INPUTS = 1-AltisLifeRPG_Array, 2, 3
-
-Number of Inputs = 3
-
-;;______________________________________________________________
-[wantedInsertCrimes]
-;;
-
-SQL1_1 = INSERT INTO wanted (wantedID, wantedName, wantedCrimes, wantedBounty, active) 
-SQL1_2 = 	VALUES(?,?,?,?,?);
-
-SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5
-
-Number of Inputs = 5
-
-;;______________________________________________________________
-[wantedFetchBounty]
-;;
-
-SQL1_1 = SELECT wantedID, wantedName, wantedCrimes, wantedBounty FROM wanted WHERE active='1' AND wantedID=?;
-SQL1_INPUTS = 1
-
-Number of Inputs = 1
-
-OUTPUT = 1-String, 2-String, 3-AltisLifeRPG_Array, 4
-
-;;______________________________________________________________
-[wantedFetchCrimes]
-;;
-
-SQL1_1 = SELECT wantedCrimes, wantedBounty FROM wanted WHERE active='1' AND wantedID=?;
-SQL1_INPUTS = 1
-
-Number of Inputs = 1
-OUTPUT = 1-AltisLifeRPG_Array, 2
-
-;;______________________________________________________________
-[wantedFetchID]
-;;
-
-SQL1_1 = SELECT wantedID, wantedName FROM wanted WHERE active='1' AND wantedID in (?);
-SQL1_INPUTS = 1
-
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String
-
-;;______________________________________________________________
-[wantedFetchPerson]
-;;
-
-SQL1_1 = SELECT wantedID, wantedName, wantedBounty FROM wanted WHERE wantedID=? AND active='1';
-SQL1_INPUTS = 1
-
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3
-
-;;______________________________________________________________
-[wantedFetchName]
-;;
-
-SQL1_1 = SELECT wantedName FROM wanted WHERE wantedID=?;
-SQL1_INPUTS = 1
-
-Number of Inputs = 1
-OUTPUT = 1-String
-
-;;______________________________________________________________
-[wantedUpdateName]
-;;
-
-SQL1_1 = UPDATE wanted SET wantedName=? WHERE wantedID=?;
-SQL1_INPUTS = 1,2
-
-Number of Inputs = 2
-
-;;______________________________________________________________
-[wantedRemoveCrimes]
-;;
-
-SQL1_1 = UPDATE wanted SET active = 0, wantedCrimes = '[]', wantedBounty = 0 WHERE wantedID=?;
+SQL1_1 = UPDATE wanted SET list=? WHERE id='1';
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
