--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -298,12 +298,12 @@ OUTPUT = 1-String, 2-String, 3, 4, 5-String, 6-String, 7-AltisLifeRPG_Array, 8-S
 ;;______________________________________________________________
 [playerCivInfo]
 ;;
-;;              1         2     3     4        5           6           7             8          9         10
-SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donatorlvl, civ_licenses, arrested, civ_gear, position FROM players WHERE playerid=?;
+;;              1         2     3     4        5           6           7             8          9
+SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donatorlvl, civ_licenses, arrested, civ_gear FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3, 4, 5-String, 6-String, 7-AltisLifeRPG_Array, 8-String, 9-AltisLifeRPG_Array, 10-string
+OUTPUT = 1-String, 2-String, 3, 4, 5-String, 6-String, 7-AltisLifeRPG_Array, 8-String, 9-AltisLifeRPG_Array
 
 ;;______________________________________________________________
 [playerIndependentInfo]
@@ -333,10 +333,10 @@ Number of Inputs = 6
 ;;
 
 SQL1_1 = UPDATE players
-;;				1          2 	    3          4               5           6                7           8
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, position=? WHERE playerid=?;
+;;				1          2 	    3          4               5           6                7
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=? WHERE playerid=?;
 
-SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5-AltisLifeRPG_Array, 6, 7, 8
+SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5-AltisLifeRPG_Array, 6, 7
 
 Number of Inputs = 7
 
@@ -347,7 +347,7 @@ Number of Inputs = 7
 
 SQL1_1 = UPDATE players
 ;;				1          2 	    3          4               5                 6
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=? WHERE playerid=?;
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5-AltisLifeRPG_Array, 6
 
