--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -722,3 +722,12 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 ;;______________________________________________________________
+[updateLocation]
+;;
+
+SQL1_1 = UPDATE plocs SET location=? WHERE pid=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
