--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -731,3 +731,12 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 ;;______________________________________________________________
+[getLocation]
+;;
+
+SQL1_1 = SELECT location FROM plocs WHERE pid=?;
+SQL1_INPUTS = 1
+
+Number of Inputs = 1
+
+;;______________________________________________________________
