Let's not require a mySQL wipe to get this feature running

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -725,7 +725,7 @@ Number of Inputs = 2
 [updateLocation]
 ;;
 
-SQL1_1 = UPDATE plocs SET location=? WHERE pid=?;
+SQL1_1 = UPDATE players SET position=? WHERE playerid=?;
 SQL1_INPUTS = 1, 2
 
 Number of Inputs = 2
@@ -734,7 +734,7 @@ Number of Inputs = 2
 [getLocation]
 ;;
 
-SQL1_1 = SELECT location FROM plocs WHERE pid=?;
+SQL1_1 = SELECT position FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
