Messing around with data types

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -726,7 +726,7 @@ Number of Inputs = 2
 ;;
 
 SQL1_1 = UPDATE players SET position=? WHERE playerid=?;
-SQL1_INPUTS = 1-AltisLifeRPG_Array, 2
+SQL1_INPUTS = 1, 2
 
 Number of Inputs = 2
 
