Potential prison sync fix

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -468,8 +468,7 @@ Number of Inputs = 2
 [playerUpdateArrested]
 ;;
 
-SQL1_1 = UPDATE players
-SQL1_2 = 		SET arrested=? WHERE playerid=?;
+SQL1_1 = UPDATE players SET arrested=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
