--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -333,12 +333,12 @@ Number of Inputs = 6
 ;;
 
 SQL1_1 = UPDATE players
-;;				1          2 	    3          4               5           6                7
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=? WHERE playerid=?;
+;;				1          2 	    3          4               5                6
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=? WHERE playerid=?;
 
-SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5-AltisLifeRPG_Array, 6, 7
+SQL1_INPUTS = 1, 2, 3, 4-AltisLifeRPG_Array, 5-AltisLifeRPG_Array, 6
 
-Number of Inputs = 7
+Number of Inputs = 6
 
 
 ;;______________________________________________________________
