Add rank queries

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -248,15 +248,6 @@ SQL1_INPUTS = 1,2
 
 Number of Inputs = 2
 
-;;______________________________________________________________
-[hideoutCheck]
-;; Gets info on hideouts
-;;
-
-SQL1_1 = SELECT gangName FROM hideouts WHERE id='1';
-
-Number of Inputs = 0
-
 ;;**************************************************************
 ;;**************************************************************
 ;; PLAYERS
@@ -277,13 +268,13 @@ OUTPUT = 1, 2
 ;;
 
 SQL1_1 = INSERT INTO players 
-;;				1          2 	 3     4        5        6             7             8             9         10        11        12
-SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear, position) 
-SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?)
+;;				1          2 	 3     4        5        6             7             8             9         10        11        12        13
+SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear, position, gangRank) 
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 
-Number of Inputs = 12
+Number of Inputs = 13
 
 ;;______________________________________________________________
 [playerWestInfo]
@@ -734,6 +725,24 @@ Number of Inputs = 2
 ;;
 
 SQL1_1 = SELECT position FROM players WHERE playerid=?;
+SQL1_INPUTS = 1
+
+Number of Inputs = 1
+
+;;______________________________________________________________
+[updateRank]
+;;
+
+SQL1_1 = UPDATE players SET rank=? WHERE playerid=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
+[getRank]
+;;
+
+SQL1_1 = SELECT rank FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
