More gang house

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -187,11 +187,11 @@ Number of Inputs = 1
 ;; Get Gang Info
 ;;
 
-SQL1_1 = SELECT id, owner, name, maxmembers, bank, members FROM gangs WHERE active='1' AND members LIKE ?;
+SQL1_1 = SELECT id, owner, name, maxmembers, bank, members, house FROM gangs WHERE active='1' AND members LIKE ?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
-OUTPUT = 1, 2-String, 3-String, 4, 5, 6-AltisLifeRPG_Array
+OUTPUT = 1, 2-String, 3-String, 4, 5, 6-AltisLifeRPG_Array, 7
 
 
 ;;______________________________________________________________
@@ -214,6 +214,17 @@ SQL1_1 = UPDATE gangs SET bank=?, maxmembers=?, owner=? WHERE id=?;
 SQL1_INPUTS = 1, 2, 3-String, 4
 
 Number of Inputs = 4
+
+
+;;______________________________________________________________
+[gangHouseUpdate]
+;; Update Gang Info
+;;
+
+SQL1_1 = UPDATE gangs SET house=? WHERE id=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
 
 
 ;;______________________________________________________________
