--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -661,6 +661,14 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 ;;______________________________________________________________
+[housingSwapOwner]
+;;
+SQL1_1 = UPDATE houses SET pid=? WHERE id=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
 [wantedSync]
 ;;
 
