--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -279,13 +279,13 @@ OUTPUT = 1, 2
 ;;
 
 SQL1_1 = INSERT INTO players 
-;;				1          2 	 3     4        5        6             7             8             9         10        11        12        13
-SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear, position, rank) 
+;;				1          2 	 3     4        5        6             7             8             9         10        11        12
+SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear, rank) 
 SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
 
-Number of Inputs = 13
+Number of Inputs = 12
 
 ;;______________________________________________________________
 [playerWestInfo]
