Add more for drug deals

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -767,3 +767,21 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 ;;______________________________________________________________
+[updateRep]
+;;
+
+SQL1_1 = UPDATE players SET reputation=? WHERE playerid=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
+[getRep]
+;;
+
+SQL1_1 = SELECT reputation FROM players WHERE playerid=?;
+SQL1_INPUTS = 1
+
+Number of Inputs = 1
+
+;;______________________________________________________________
