--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -723,8 +723,7 @@ Number of Inputs = 0
 [InsuranceVehicle]
 ;;
 
-SQL1_1 = UPDATE vehicles;
-SQL1_2 = SET alive='1', active='0' WHERE pid=? AND plate=?;
+SQL1_1 = UPDATE vehicles SET alive='1', active='0' WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2
 
