Wanted list makeover

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -669,10 +669,10 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 ;;______________________________________________________________
-[wantedSync]
+[wantedPull]
 ;;
 
-SQL1_1 = SELECT list FROM wanted WHERE id = '1';
+SQL1_1 = SELECT info FROM wanted WHERE id = '1';
 
 Number of Inputs = 0
 
@@ -680,10 +680,19 @@ Number of Inputs = 0
 [wantedUpdate]
 ;;
 
-SQL1_1 = UPDATE wanted SET list=? WHERE id='1';
+SQL1_1 = UPDATE wanted SET info=? WHERE pid=?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
+
+;;______________________________________________________________
+[pardonWanted]
+;;
+
+SQL1_1 = DELETE FROM wanted WHERE pid=?;
+
+Number of Inputs = 1
+Prepared Statement Cache = false
 
 ;;______________________________________________________________
 [cartelCall]
