Complete wanted rewrite

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -669,30 +669,22 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 ;;______________________________________________________________
-[wantedPull]
+[wantedSave]
 ;;
 
-SQL1_1 = SELECT info FROM wanted WHERE id = '1';
+SQL1_1 = UPDATE players SET bounties=? WHERE playerid=?;
+SQL1_INPUTS = 1, 2
 
-Number of Inputs = 0
+Number of Inputs = 2
 
 ;;______________________________________________________________
-[wantedUpdate]
+[wantedLoad]
 ;;
 
-SQL1_1 = UPDATE wanted SET info=? WHERE pid=?;
+SQL1_1 = SELECT bounties FROM players WHERE playerid = ?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
-
-;;______________________________________________________________
-[pardonWanted]
-;;
-
-SQL1_1 = DELETE FROM wanted WHERE pid=?;
-
-Number of Inputs = 1
-Prepared Statement Cache = false
 
 ;;______________________________________________________________
 [cartelCall]
