Add ingame whitelist server function

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -785,3 +785,12 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 ;;______________________________________________________________
+[copWhitelist]
+;;
+
+SQL1_1 = UPDATE players SET coplevel=? WHERE playerid=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
