Gang house rewrite

--- a/@extDB/extdb/db_custom/altis-life-rpg-4.ini
+++ b/@extDB/extdb/db_custom/altis-life-rpg-4.ini
@@ -215,18 +215,6 @@ SQL1_INPUTS = 1, 2, 3-String, 4
 
 Number of Inputs = 4
 
-
-;;______________________________________________________________
-[gangHouseUpdate]
-;; Update Gang Info
-;;
-
-SQL1_1 = UPDATE gangs SET house=? WHERE id=?;
-SQL1_INPUTS = 1, 2
-
-Number of Inputs = 2
-
-
 ;;______________________________________________________________
 [gangMaxMembersUpdate]
 ;; Update Gang Max Members
@@ -621,6 +609,14 @@ Number of Inputs = 5
 OUTPUT = 1
 
 ;;______________________________________________________________
+[housingChangeOwner]
+;;
+SQL1_1 = UPDATE houses SET pid=? WHERE id=?;
+SQL1_INPUTS = 1, 2
+
+Number of Inputs = 2
+
+;;______________________________________________________________
 [housingSellHouse]
 ;;
 SQL1_1 = UPDATE houses SET owned='0', pos='[]' WHERE pid=? AND pos=? AND owned='1';
@@ -659,14 +655,6 @@ SQL1_1 = SELECT pid, pos, inventory, containers FROM houses WHERE pid=? AND owne
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
-
-;;______________________________________________________________
-[housingSwapOwner]
-;;
-SQL1_1 = UPDATE houses SET pid=? WHERE id=?;
-SQL1_INPUTS = 1, 2
-
-Number of Inputs = 2
 
 ;;______________________________________________________________
 [wantedSave]
